--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "events",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "prettier --write \"src/**/*.{js,json,css}\""
   },
   "keywords": [],
   "author": "John Rees <john@bitsushi.com>",
   "license": "MIT",
   "dependencies": {
-    "eventemitter3": "^2.0.3",
+    "chalk": "^2.1.0",
     "micro-signals": "^1.1.1",
-    "microevent": "^1.0.0"
+    "ws": "^3.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^1.7.4"
   }
 }
